--- a/Views/Shared/_Footer.cshtml
+++ b/Views/Shared/_Footer.cshtml
@@ -39,6 +39,7 @@
                     <li><a href="/pages/gioithieu.html">Giới thiệu Tiệm sữa 4CE </a></li>
                     <li><a href="/sanpham/product.html">Danh sách các sản phẩm</a></li>
                     <li><a href="https://eva.vn/kien-thuc-nuoi-con-p2885c10.html">Kiến thức nuôi con</a></li>
+                    <li><a asp-controller="Home" asp-action="ChinhSachBaoMat">Chính sách bảo mật</a></li>
                 </ul>
             </div>
 
@@ -49,6 +50,7 @@
                     <li><a href="#">Phương thức thanh toán</a></li>
                     <li><a href="#">Phương thức giao hàng</a></li>
                     <li><a asp-controller="Home" asp-action="Contact">Gửi góp ý / Khiếu nại</a></li>
+
                 </ul>
             </div>
 
