--- a/Views/TaiKhoan/LichSuDonHang.cshtml
+++ b/Views/TaiKhoan/LichSuDonHang.cshtml
@@ -27,9 +27,10 @@
                     <tr>
                         <th>Mã đơn</th>
                         <th>Ngày đặt</th>
-                        <th>Trạng thái</th>
+                        <th>Trạng thái</th
                         <th>Sản phẩm</th>
                         <th>Thao tác</th>
+                        <th></th>
                     </tr>
                 </thead>
                 <tbody>
@@ -56,11 +57,16 @@
                                             <th>Tên sản phẩm</th>
                                             <th>Số lượng</th>
                                             <th>Đơn giá</th>
+                                            <th>Thành tiền</th>
                                         </tr>
                                     </thead>
                                     <tbody>
+                                        @{
+                                            double tongTien = 0;
+                                        }
                                         @foreach (var ct in donhang.ChiTietDonHangs ?? new List<BanSua4CE.Data.ChiTietDonHang>())
                                         {
+                                            tongTien += ct.ThanhTien;
                                             <tr>
                                                 <td>
                                                     <img src="~/hinhanh/@ct.IdSpNavigation.HinhAnh" alt="@ct.IdSpNavigation.TenSp"
@@ -69,11 +75,22 @@
                                                 <td>@ct.IdSpNavigation.TenSp</td>
                                                 <td>@ct.SoLuong</td>
                                                 <td>@ct.DonGia.ToString("N0")₫</td>
+                                                <td>@ct.ThanhTien.ToString("N0")đ</td>
                                             </tr>
                                         }
                                     </tbody>
+                                    <tfoot>
+                                        <tr class="table-light fw-bold">
+                                            <td colspan="4" class="text-end">Tổng cộng:</td>
+                                            <td>@tongTien.ToString("##,#")</td>
+                                        </tr>
+                                    </tfoot>
                                 </table>
                             </td>
+
+                            <td>
+                        </td>
+
                             <td>
                                 @if (donhang.MaTrangThai != "Đã thanh toán" &&
                                donhang.MaTrangThai != "Đã hủy" &&
