--- a/Views/Home/ChinhSachBaoHanh.cshtml
+++ b/Views/Home/ChinhSachBaoHanh.cshtml
@@ -1,5 +1,4 @@
-﻿
-<section class="container my-5">
+﻿<section class="container my-5">
     <h2 class="font-weight-bold" style=" color: hwb(230 6% 33%)">Chính sách bảo hành</h2>
 
     <p><strong>Chính sách Bảo hành sản phẩm bán tại hệ thống cửa hàng Tiệm Sữa 4CE</strong></p>
