--- a/Views/QLDM/Index.cshtml
+++ b/Views/QLDM/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Danh sách danh mục</h1>
+<h1 style="color: hwb(230 6% 33%) !important;text-align: center;font-size:30px ">Danh sách danh mục</h1>
 
 <p> 
-    <a asp-action="Create" class="btn btn-sm btn-primary">Thêm Danh Mục</a>
+    <a asp-action="Create" class="btn btn-sm " style="background-color: hwb(230 6% 33%) !important; color: white">Thêm Danh Mục</a>
 </p>
 <table class="table">
     <thead>
