--- a/Views/TaiKhoan/LichSuDonHang.cshtml
+++ b/Views/TaiKhoan/LichSuDonHang.cshtml
@@ -29,6 +29,7 @@
                         <th>Ngày đặt</th>
                         <th>Trạng thái</th
                         <th>Sản phẩm</th>
+                        <th>Chi Tiết</th>
                         <th>Thao tác</th>
                         <th></th>
                     </tr>
