--- a/Views/QLSP/Index.cshtml
+++ b/Views/QLSP/Index.cshtml
@@ -4,32 +4,13 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Danh Sách Các Sản Phẩm</h1>
+<h1 style="color: hwb(230 6% 33%) !important;text-align: center;font-size:30px ">Danh Sách Các Sản Phẩm</h1>
 
 
 <p>
-    <a asp-action="Create" asp-controller="QLSP" class="btn btn-sm btn-primary">Thêm Sản Phẩm</a>
+    <a asp-action="Create" asp-controller="QLSP" class="btn btn-sm " style="background-color: hwb(230 6% 33%) !important; color: white">Thêm Sản Phẩm</a>
 </p>
 
-@* <form asp-action="Index" method="get" class="mb-3">
-    <div class="input-group w-50 gap-2">
-        <input type="text" name="searchString" value="@ViewData["CurrentFilter"]" class="form-control" placeholder="Tìm theo tên hoặc mô tả..." />
-        <button type="submit" class="btn btn-outline-success">Tìm kiếm</button>
-    </div>
-</form>
-
-<form asp-action="Index" method="get" class="mb-3">
-    <div class="input-group w-50 gap-2">
-        <select name="trangThaiLoc" class="form-select">
-            <option value="">-- Tất cả --</option>
-            <option value="1" selected="@(ViewData["TrangThaiLoc"]?.ToString() == "1")">Còn hoạt động</option>
-            <option value="0" selected="@(ViewData["TrangThaiLoc"]?.ToString() == "0")">Không hoạt động</option>
-
-        </select>
-        <button type="submit" class="btn btn-outline-primary">Lọc</button>
-    </div>
-</form>
- *@
 <form asp-action="Index" method="get" class="mb-4" id="filterForm">
     <div class="input-group w-75 gap-2">
 
@@ -49,6 +30,9 @@
         <button type="submit" name="actionType" value="filter" class="btn btn-outline-primary">Lọc</button>
     </div>
 </form>
+
+
+
 
 
 <table class="table">
