--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -90,7 +90,7 @@
                         if (User.IsInRole("Admin"))
                         {
                             <div class="d-flex align-items-center gap-2">
-                                <span class="text-dark">👋<strong>@User.Identity.Name</strong> (Quản trị)</span>
+                                <span class="text-warning ">👋<strong>@User.Identity.Name</strong> (Quản trị)</span>
                             </div>
                             <a class="nav-link" asp-action="DangXuat" asp-controller="TaiKhoan">Đăng Xuất</a>
 
@@ -98,7 +98,7 @@
                         else
                         {
                             <div class="d-flex align-items-center gap-2">
-                                <span class="text-dark">👋 Xin chào, <strong>@User.Identity.Name</strong></span>
+                                <span class="text-warning">👋<strong>@User.Identity.Name</strong></span>
                                 <a class="nav-link" asp-action="DangXuat" asp-controller="TaiKhoan">Đăng Xuất</a>
                             </div>
                             <div class="d-flex align-items-center gap-2">
