--- a/Views/Shared/_Footer.cshtml
+++ b/Views/Shared/_Footer.cshtml
@@ -59,13 +59,14 @@
                 <h4>HÌNH THỨC VẬN CHUYỂN</h4>
                 <div class="payment-methods">
                     <img src="https://static.ybox.vn/2022/5/1/1652680275506-logo%20ghtk.jpg">
-                    <img src="https://static.ybox.vn/2022/8/0/1661672485409-GHN_logo-01.png">
-                    <img src="https://reviewphongtap.com/wp-content/uploads/2020/03/ahamove-la-gi-1.png">
+                    <img src="https://static.ybox.vn/2022/8/0/1661672485409-GHN_logo-01.png">                    
                 </div>
 
                 <h4>PHƯƠNG THỨC THANH TOÁN</h4>
                 <div class="payment-methods">
                     <img src="https://www.goldtek.vn/wp-content/uploads/2020/10/zalopay-logo.png" alt="ZaloPay">
+                    <img src="~/hinhanh/logovnpay.png" alt="VNPAY" style="height:40px;">
+                    <img src="~/hinhanh/logcod.png" alt="COD" style="height:40px;">
                 </div>
             </div>
         </div>
@@ -73,15 +74,21 @@
         <!-- Dòng dưới cùng -->
         <div class="footer-bottom">
             <div class="social-links">
-                <a href="https://www.facebook.com/thuy.kieu.725105"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-                <a href="#"><i class="fab fa-tiktok"></i></a>
-                <a href="#"><i class="fab fa-shopify"></i></a>
+                <a href="https://www.facebook.com/kidsplaza.com.vn"><i class="fab fa-facebook-f"></i></a>
+                
+                <a href="https://www.youtube.com/results?search_query=kidsplaza+channel"><i class="fab fa-youtube"></i></a>
+                <a href="https://www.tiktok.com/search?q=kidsplaza&t=1753918653725"><i class="fab fa-tiktok"></i></a>
+                <a href="https://shopee.vn/kidsplaza_official?is_from_login=true"><i class="fab fa-shopify"></i></a>
             </div>
             <div class="certification">
-                <img src="https://dangkywebvoibocongthuong.com/wp-content/uploads/2021/11/logo-da-thong-bao-bo-cong-thuong.png" alt="Đã thông báo Bộ Công Thương">
+                <a href="http://online.gov.vn/Home/WebDetails/42263?AspxAutoDetectCookieSupport=1" target="_blank" rel="noopener noreferrer">
+                    <img src="https://dangkywebvoibocongthuong.com/wp-content/uploads/2021/11/logo-da-thong-bao-bo-cong-thuong.png" alt="Đã thông báo Bộ Công Thương">
+                </a>
             </div>
+
             <p>Bản quyền © 2025 Tiệm sữa 4CE</p>
         </div>
     </div>
 </footer>
+
+
