--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -32,10 +32,10 @@
             <div class="hero-slider">
                 <button class="prev-btn">&#10094;</button>
                 <div class="slides">
-                    <img src="https://cdn1.concung.com/img/adds/2025/02/1740064735-web-homepage-main-banner-1960x640.jpg" class="slide active">
-                    <img src="https://cdn1.concung.com/img/adds/2025/02/1740070398-home-nan-optipro.png" class="slide">
-                    <img src="https://cdn1.concung.com/img/adds/2025/02/1740059494-home-1.png" class="slide">
-                    <img src="https://cdn1.concung.com/img/adds/2025/02/1740586510-home.png" class="slide">
+                    <img src="~/hinhanh/banner1.jpg" class="slide active">
+                    <img src="~/hinhanh/banner2.png" class="slide">
+                    <img src="~/hinhanh/banner3.png" class="slide">
+                    <img src="~/hinhanh/banner4.png" class="slide">
                 </div>
                 <button class="prev-btn" onclick="prevSlide()">❮</button>
                 <button class="next-btn" onclick="nextSlide()">❯</button>
@@ -50,74 +50,74 @@
 
                         <div class="card brand-card">
                             <a asp-action="SanPhamTheoDM" asp-controller="Product" asp-route-id="1">
-                                <img src="https://mma.prnewswire.com/media/271488/Abbott_Logo.jpg?p=facebook" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logoabbout.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="2">
-                                <img src="https://healthycarevietnam.com.vn/wp-content/uploads/2023/04/logo-htc-1024x363.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logohealthy.png" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="3">
-                                <img src="http://tous-logos.com/wp-content/uploads/2018/01/Nestl%C3%A9-Logo.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logonestle.png" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-action="SanPhamTheoDM" asp-controller="Product" asp-route-id="4">
-                                <img src="https://logowik.com/content/uploads/images/aptamil1714.jpg" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logoaptamil.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="5" asp-action="SanPhamTheoDM" asp-route-id="5">
-                                <img src="https://download.logo.wine/logo/Meiji_Seika/Meiji_Seika-Logo.wine.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logomeiji.png" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-action="SanPhamTheoDM" asp-controller="Product" asp-route-id="6">
 
-                                <img src="https://www.popai-global.com/wp-content/uploads/2018/06/friso-logo.jpg" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/friso-logo.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="7">
-                                <img src="https://i.gyazo.com/9f14dbd7ca70d82102cff05cfadf77a7.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logovinamilk.png" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="8">
-                                <img src="https://forbes.vn/wp-content/uploads/2022/08/LogoTop25fnb_nutifood.jpg" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logonutifood.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="9">
-                                <img src="https://thanhs.com.vn/wp-content/uploads/2020/09/image1-1.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logoth.webp" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="10">
-                                <img src="https://cdn.tgdd.vn/Files/2023/01/28/1504986/bao-ve-he-tieu-hoa-cho-be-voi-sua-hipp-combiotic-den-tu-chau-au-202301281029486486.jpg" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logohipp.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="11">
-                                <img src="https://cdn.nhanlucnganhluat.vn/uploads/images/19A2C2B0/logo/2022-03/Logo%20Nutricare-01.png" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logonutricare.png" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
                         <div class="card brand-card">
                             <a asp-controller="Product" asp-action="SanPhamTheoDM" asp-route-id="12">
-                                <img src="http://file.hstatic.net/200000315451/collection/7185121e-2db2-411c-8cfe-81d62089a5ca_58daacb3ea634b0d9100fe9aa64dd54a.jpg" class="card-img-top" alt="Sữa Bột 1">
+                                <img src="~/hinhanh/logoenfa.jpg" class="card-img-top" alt="Sữa Bột 1">
                             </a>
                         </div>
 
@@ -156,6 +156,31 @@
     </main>
 </body>
 <script>
+
+    let slideIndex = 0;
+    let slides = document.querySelectorAll(".slide");
+
+    function showSlide(index) {
+        slides.forEach((slide, i) => {
+            slide.classList.remove("active");
+            if (i === index) {
+                slide.classList.add("active");
+            }
+        });
+    }
+
+    function nextSlide() {
+        slideIndex = (slideIndex + 1) % slides.length;
+        showSlide(slideIndex);
+    }
+
+    function prevSlide() {
+        slideIndex = (slideIndex - 1 + slides.length) % slides.length;
+        showSlide(slideIndex);
+    }
+
+    // Tự động chạy slide mỗi 3 giây
+    setInterval(nextSlide, 3000);
     function addToCart(productId) {
         // Gửi yêu cầu AJAX để thêm sản phẩm vào giỏ hàng
         $.ajax({
