--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -69,9 +69,9 @@
                         <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Index">Trang Chủ</a></li>
                         <li class="nav-item"><a class="nav-link" asp-controller="Product" asp-action="Index">Sản Phẩm</a></li>
                         <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="Contact">Liên Hệ</a></li>
-                        <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="GioiThieu">Giới Thiệu</a></li>
+                            <li class="nav-item"><a class="nav-link" asp-controller="Home" asp-action="GioiThieuVeTiemSua">Giới Thiệu</a></li>
                      
-
+                         
                          }
                           
                        
@@ -150,7 +150,7 @@
                         </div>
                     </div>
 
-                    <a style="color:  color: hwb(230 6% 33%) !important" href="#" class="nav-link"><i class="fas fa-store"></i> Zalo cửa hàng</a>
+                    <a style="color:  color: hwb(230 6% 33%) !important" href="https://zalo.me/2749650043063337701" class="nav-link"><i class="fas fa-store"></i> Zalo cửa hàng</a>
 
                     <a style="color:  color: hwb(230 6% 33%) !important" href="#" class="nav-link"><i class="fas fa-phone"></i> Hotline: 1800.3979</a>
                 </div>
