--- a/Views/TaiKhoan/LichSuDonHang.cshtml
+++ b/Views/TaiKhoan/LichSuDonHang.cshtml
@@ -6,14 +6,14 @@
 <div class="container my-5">
     <h3 class="mb-4 text-primary"><i class="fas fa-clipboard-list"></i> Lịch sử đơn hàng</h3>
 
-    @if (TempData["Message"] != null)
+   @*  @if (TempData["Message"] != null)
     {
         <div class="alert alert-success">@TempData["Message"]</div>
     }
     @if (TempData["Error"] != null)
     {
         <div class="alert alert-warning">@TempData["Error"]</div>
-    }
+    } *@
 
     @if (!Model.Any())
     {
